--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,22 +13,8 @@
     ],
 	"extensions": [
 		"VisualStudioExptTeam.vscodeintellicode",
-		"alexkrechik.cucumberautocomplete",
-		"bierner.github-markdown-preview",
-		"cstrap.flask-snippets",
-		"DavidAnson.vscode-markdownlint",
-		"donjayamanne.githistory",
-		"GitHub.vscode-pull-request-github",
-		"hbenl.vscode-test-explorer",
-		"hnw.vscode-auto-open-markdown-preview",
-		"ms-python.python",
-		"ms-python.vscode-pylance",
-		"njpwerner.autodocstring",
-		"redhat.vscode-yaml",
-		"streetsidesoftware.code-spell-checker",
-		"wholroyd.jinja",
-		"yzhang.markdown-all-in-one"		
+		"JuanBlanco.solidity"
 	],
-	//"forwardPorts": [5000],
+	"forwardPorts": [7545, 8545],
 	"postCreateCommand": "sudo npm install",
 }
