--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@truffle/hdwallet-provider": "^2.0.7",
+    "axios": "^0.27.2",
     "ganache": "^7.0.5"
   },
   "engines": {
