--- a/manifest.yml
+++ b/manifest.yml
@@ -2,9 +2,9 @@ applications:
 - name: shineme1
   random-route: true
   memory: 256M
-  buildpacks: nodejs_buildpack
+  buildpack: nodejs_buildpack
 
 - name: shineme2
   random-route: true
   memory: 256M
-  buildpacks: nodejs_buildpack
+  buildpack: nodejs_buildpack
